tests/paczka1/fuzzy1/25463070.err
Error in line 4: F9ep S638 33,6
Error in line 5: S906 S906 30,2
Error in line 8: F9ep S906 85,9
Error in line 11: F9ep S638 34,5
Error in line 15: LaJ S638 88,4
Error in line 17: F9ep A217 447,7
Error in line 21: 07Zxn S638 68,2
Error in line 25: F9ep S575 206,55
Error in line 30: XRb S575 34,6
